syntax = "proto3";

option go_package = "/genproto/transport_service";

package genproto;

service TransportService{
  rpc GetBusSchedule(BusScheduleRequest) returns (BusScheduleResponse);
  rpc TrackBusLocation(BusLocationRequest) returns (Station);
  rpc ReportTrafficJam(TrafficJamRequest) returns (TrafficJamResponse);
}


message BusScheduleRequest {
  int32 BusNumber = 1;
}
message BusScheduleResponse {
  repeated Station stations  = 1;
}
message BusLocationRequest {
  string BusNumber = 1;
}
message Station {
  string StationName = 1;
}
message TrafficJamRequest {
  string Report = 1;
}
message TrafficJamResponse {
  bool IsReport = 1;
}